--- a/src/app/App.css
+++ b/src/app/App.css
@@ -34,7 +34,8 @@ body {
   width: 100%;
 }
 .pagination {
-  align-self: self-end;
+  align-self: center;
+  padding-bottom: 20px;
 }
 
 @media (max-width: 970px) {
